--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,13 @@
       <section class="cards">
         <ul class="cards__list"></ul>
       </section>
+      <section class="loading">
+        <p class="loading__text">Loading...</p>
+      </section>
+      <section class="no-data">
+        <p class="no-data__text">No more data...</p>
+      </section>
     </main>
-<!--Footer-->
-    <footer></footer>
 <!--Template for card-->
     <template id="card-template">
       <li class="card">
